# data-repo-gen

./: .gitignore  LICENSE  README.md  pyproject.toml
data_repo_gen/: cli.py  generator.py  uciml_download.py
tests/: test_import.py
