
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-repo-gen"
version = "0.1.0"
description = "Generate intentionally messy teaching repos from any CSV."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Your Name"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Education",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "pandas",
    "nbformat",
    "scikit-learn",
    "ucimlrepo",
]

[tool.setuptools.packages.find]
include = ["data_repo_gen"]
exclude = ["tests", "datasets"]

[project.scripts]
data-repo-gen-fetch = "data_repo_gen.uciml_download:main"
